Ditch use of Google Truth
Truth is not bringing anything to the table, really. Use JUnit and
Hamcrest assertions instead. While we are at, also improve asserts
and use Files.writeString().

Change-Id: I8779a621837dd19a8f0b74e90bb5cda10e92cac5
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>